# ishare.word

./: .env  .gitignore  README.md  backend_api.py  iShare Word Uploader - Windows 打包教學.md  publish_word.py  pyproject.toml  requirements.txt  run_app.py  word_uploader_app.py
